--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -24,43 +24,43 @@
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0 ">
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=420">Bakı</a>
+                                                        <a href="#">Bakı</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=419">Sumqayıt</a>
+                                                        <a href="#">Sumqayıt</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=468">Ağcabədi</a>
+                                                        <a href="#">Ağcabədi</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=478">Ağdam</a>
+                                                        <a href="#">Ağdam</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=429">Ağdaş</a>
+                                                        <a href="#">Ağdaş</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=481">Ağdərə</a>
+                                                        <a href="#">Ağdərə</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=430">Ağstafa</a>
+                                                        <a href="#">Ağstafa</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=470">Ağsu</a>
+                                                        <a href="#">Ağsu</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=428">Astara</a>
+                                                        <a href="#">Astara</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=423">Balakən</a>
+                                                        <a href="#">Balakən</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=431">Beyləqan</a>
+                                                        <a href="#">Beyləqan</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=433">Bərdə</a>
+                                                        <a href="#">Bərdə</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=432">Biləsuvar</a>
+                                                        <a href="#">Biləsuvar</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -68,129 +68,129 @@
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0" >
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=450">Xırdalan</a>
+                                                        <a href="#">Xırdalan</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=418">Gəncə</a>
+                                                        <a href="#">Gəncə</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=482">Cəbrayıl</a>
+                                                        <a href="#">Cəbrayıl</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=434">Cəlilabad</a>
+                                                        <a href="#">Cəlilabad</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=472">Culfa</a>
+                                                        <a href="#">Culfa</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=475">Daşkəsən</a>
+                                                        <a href="#">Daşkəsən</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=467">Füzuli</a>
+                                                        <a href="#">Füzuli</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=474">Gədəbəy</a>
+                                                        <a href="#">Gədəbəy</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=477">Goranboy</a>
+                                                        <a href="#">Goranboy</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=436">Göyçay</a>
+                                                        <a href="#">Göyçay</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=469">Göygöl</a>
+                                                        <a href="#">Göygöl</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=435">Göytəpə</a>
+                                                        <a href="#">Göytəpə</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=437">Hacıqabul</a>
+                                                        <a href="#">Hacıqabul</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                     <ul class="list-unstyled mb-0">
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=426">Qəbələ</a>
+                                                            <a href="#">Qəbələ</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=448">Xaçmaz</a>
+                                                            <a href="#">Xaçmaz</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=466">Horadiz</a>
+                                                            <a href="#">Horadiz</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=455">İmişli</a>
+                                                            <a href="#">İmişli</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=456">İsmayıllı</a>
+                                                            <a href="#">İsmayıllı</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=484">Kəlbəcər</a>
+                                                            <a href="#">Kəlbəcər</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=473">Kürdəmir</a>
+                                                            <a href="#">Kürdəmir</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=486">Laçın</a>
+                                                            <a href="#">Laçın</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=479">Lerik</a>
+                                                            <a href="#">Lerik</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=438">Masallı</a>
+                                                            <a href="#">Masallı</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=462">Nabran</a>
+                                                            <a href="#">Nabran</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=476">Naftalan</a>
+                                                            <a href="#">Naftalan</a>
                                                         </li>
                                                         <li>
-                                                            <a href="/elanlar?q%5Bregion_id%5D=422">Naxçıvan</a>
+                                                            <a href="#">Naxçıvan</a>
                                                         </li>
                                                     </ul>
                                             </div>
                                             <div class="col-lg-2 col-md-2 mb-4 mb-md-0">
                                                 <ul class="list-unstyled mb-0">
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=425">Quba</a>
+                                                        <a href="#">Quba</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=460">Şəki</a>
+                                                        <a href="#">Şəki</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=439">Neftçala</a>
+                                                        <a href="#">Neftçala</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=440">Oğuz</a>
+                                                        <a href="#">Oğuz</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=492">Ordubad</a>
+                                                        <a href="#">Ordubad</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=441">Qax</a>
+                                                        <a href="#">Qax</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=463">Qazax</a>
+                                                        <a href="#">Qazax</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=464">Qobustan</a>
+                                                        <a href="#">Qobustan</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=485">Qubadlı</a>
+                                                        <a href="#">Qubadlı</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=443">Saatlı</a>
+                                                        <a href="#">Saatlı</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=444">Sabirabad</a>
+                                                        <a href="#">Sabirabad</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=457">Şabran</a>
+                                                        <a href="#">Şabran</a>
                                                     </li>
                                                     <li>
-                                                        <a href="/elanlar?q%5Bregion_id%5D=494">Şahbuz</a>
+                                                        <a href="#">Şahbuz</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -295,17 +295,18 @@
                                     </div>
                                     <div class="links-sites">
                                         <a class="link-bossaz" target="_blank" href="https://boss.az">
-                                            <img alt="bos.az" src="../static/img/boss_az.jpg">
+                                            <img alt="bos.az"  src="{% static 'img/boss_az.jpg' %}">
                                         </a>
                                         <a class="link-turboaz" target="_blank" href="https://turbo.az">
-                                            <img alt="burbo.az" src="../static/img/turbo_az.jpg">
+                                            <img alt="burbo.az" src="{% static 'img/turbo_az.jpg' %}">
                                         </a>
                                         <a class="link-binaaz" target="_blank" href="https://bina.az">
-                                            <img alt="bina.az" src="../static/img/bina_az.jpg"> 
+                                            <img alt="bina.az" src="{% static 'img/bina_az.jpg' %}"> 
                                         </a>
+                                    
                                         <div class="counters">
                                             <a rel="nofollow noopener" target="_blank" href="#">
-                                                <img alt="LiveInternet: показано количество просмотров и посетителей" height="109" src="../static/img/footer_end.png">
+                                                <img alt="LiveInternet: показано количество просмотров и посетителей" height="109" src="{%static 'img/footer_end.png' %}">
                                             </a>
                                         </div>
                                     </div>
@@ -314,4 +315,5 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>  
+        </div>
