--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,7 +19,7 @@
 <body>
     <div class="home-page">
         {% include "includes/navbar.html" %}
-        {% include "includes/header_main" %}
+        {% include "includes/header_main.html" %}
        
 
         <!-- Content-->
