--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -1,3 +1,4 @@
+{% load static%}
 <div class="footer-info-container">
             <div class="container">
                 <div class="container-fluid">
