--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-md" id="nav">   
+<nav class="navbar navbar-expand-md" id="nav">   
         <div class="container">        
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
