--- a/app/app/static/css/navbar.css
+++ b/app/app/static/css/navbar.css
@@ -8,7 +8,9 @@ nav {
     font-size: 15px;
     color: #fff;  
 }
-
+#navbarSupportedContent{
+    padding: 0 5% 0 5%;
+}
 #nav a {
     color: white;
 }
