--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,10 +1,12 @@
-<nav class="navbar fixed-top navbar-expand-md" id="nav">   
+<nav class="navbar navbar-expand-md" id="nav">   
         <div class="container">        
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li>
                             <a class="nav-link active" href="#"><i class ="fa fa-fw fa-home"></i> Əsas səhifə</a>
+                        </li>
+                        <li class="nav-item">
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link active" href="#">по-русски</a>
