--- a/app/templates/confirmation.html
+++ b/app/templates/confirmation.html
@@ -16,6 +16,17 @@
                         <img src="{% static 'img/back.jpg' %}">
                     </a>
                     <div class="title title--main">Kodun təsdiqlənməsi</div>
+                     {% if messages %}
+                            
+                            {% for message in messages %}      <!--Django.da danger mesajlari olmadigina gore info mesajini danger kimi gostereceyik-->
+                                {% if message.tags == "info" %}
+                                <div class="alert alert-danger">{{ message }}</div>  <!--burda ise message daha dinamikdi-->
+                                {% else %}
+                                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                                {% endif %}
+                            {% endfor %}
+
+                    {% endif %}
                     <div class="promo">Elektron poçta kod göndərildi</div>
                     <form action="#">
                         <div class="input-group">
