--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -3,6 +3,7 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
     <link rel="stylesheet" href="{% static 'css/header_main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/header_dropdown.css' %}">
     <link rel="stylesheet" href="{% static 'css/header_search.css'%}">
     <link rel="stylesheet" href="{% static 'css/header_search_categories.css'%}">
     <link rel="stylesheet" href="{% static 'css/home_content.css' %}">
