--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -4,6 +4,7 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
     <link rel="stylesheet" href="{% static 'css/header_main.css'%}">
+    <link rel="stylesheet" href="{% static 'css/header_dropdown.css' %}">
     <link rel="stylesheet" href="{% static 'css/add_product.css'%}">
     <link rel="stylesheet" href="{% static 'css/footer.css'%}">
 {% endblock css %}
