--- a/app/app/static/css/header_main.css
+++ b/app/app/static/css/header_main.css
@@ -23,3 +23,10 @@
     padding: 12px 63px;
     background-color: #3fa425;
 }
+.dropbtn {
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  
