--- a/app/app/static/css/password-reset.css
+++ b/app/app/static/css/password-reset.css
@@ -6,10 +6,10 @@
     justify-content: center;
     flex-direction: column;
     min-height: 100vh;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Helvetica,Arial,sans-serif;
 }
 .auth {
-    margin: 10% 0% 0% 0%;
+    margin: 10% 0 10% 0;
     width: 33%;
     padding: 39px;
     border: 1px solid #eaebf2;
@@ -37,40 +37,72 @@
     background-color: transparent;
     cursor: pointer;
 }
+.back-btn {
+    width: 48px;
+    height: 54px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: transparent;
+    font-size: 0;
+    text-decoration: none;
+    background-color: transparent;
+    cursor: pointer;
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
 .login{
-    padding: 10% 0% 5% 0%;
+    padding: 10% 2% 5% 2%;
 }
-
-.facebook {
-    content: "";
-    display: inline-block;
-    margin-right: 10px;
-    vertical-align: middle;
+.title{
+    font-size: 20px;
+    font-weight: 500;
+    color: #212c3a;
 }
-
-
-.tapaz-logo {
-    width: 106px;
-    height: 32px;
-    margin: 1px auto 20px;
-    background-size: contain;
+.title--main{
+    line-height: 1.64;
+    margin-bottom: 30px;
 }
-.promo {
-    margin-bottom: 25px;
+.input-group {
+    position: relative;
+    margin-bottom: 15px;
+    
+}
+.input-form{
+    background-color: #4b8af9;
+    color: #fff;
+    width: 100%;
+}
+form input {
+    margin-bottom: 7px;
+    margin-top: 7px;
+    height: 44px;
+    border: 1px solid #4b8af9;
+    width: 80%;
+}
+form input label{
+    height: 44px;
+    margin-right: 4px;
     font-size: 16px;
-    line-height: 1.25;
-    color: #a6abb4;
 }
-.confirmation{
-    padding: 4% 4%;;
+.btn.disabled {
+    opacity: .5;
+    pointer-events: none;
 }
+
 .btn--default {
     background-color: #4b8af9;
     border: 1px solid #4b8af9;
     color: #fff;
+    margin-bottom: 4px;
+    margin-top: 15px;
 }
 .btn {
-    margin-bottom: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,26 +116,15 @@
     box-sizing: border-box;
     outline: none;
 }
-.btn--fb {
-    color: #1877f2;
-    border: 1px solid #1877f2;
-    background-color: transparent;
-}
 
-
-.btn--default {
-    background-color: #4b8af9;
-    border: 1px solid #4b8af9;
-    color: #fff;
-}
-
-.confirmation {
-    color: #a6abb4;
-    padding: 4% 4%;
-}
-.confirmation a{
+.promo {
+    margin-bottom: 10px;
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 1.25;
     color: #a6abb4;
 }
+
 
 
 
