--- a/app/templates/accounts/password_reset_confirm.html
+++ b/app/templates/accounts/password_reset_confirm.html
@@ -1,28 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends '../includes/base.html' %}
+{% load static %}
 
-    
-    <form class="form-login" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                {{form.new_password1}}
-                {{form.new_password1.errors}}
-            </div>
-            <div class="form-group">
-                {{form.new_password2}}
-                {{form.new_password2.errors}}
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Reset Password">
-            </div>
-        </div>
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/password-reset-confirm.css'%}">
 
-    </form>
-</body>
-</html>
+{% endblock css %}
+
+{% block body %}
+
+  
+  <!--Password Reset Confirm-->
+    <div class="container p-5">
+        <div class="confirm-form">
+            <div class="title">Yeni şifrənin təsdiqi</div>
+            <form method="POST">
+                {% csrf_token %}
+                
+                    {{ form.as_p }} <br>       
+                
+                <button class="btn btn-primary" type="submit">Reset password</button>
+            </form>
+         </div>  
+    </div>
+
+{% endblock %}
