--- a/app/templates/includes/header_main.html
+++ b/app/templates/includes/header_main.html
@@ -23,7 +23,7 @@
                                         </div>
                                     </div>
                                 {% else %}
-                                    <a class="login-link" href="#"> <i class="fa fa-fw fa-user "></i>Giriş</a>
+                                    <a class="login-link" href="{% url 'users:login' %}"> <i class="fa fa-fw fa-user "></i>Giriş</a>
                                 {% endif %}
                                 <a type="button" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
                             </div> 
