--- a/app/app/static/css/login_by_email.css
+++ b/app/app/static/css/login_by_email.css
@@ -1,13 +1,3 @@
-@media screen and (max-height: 480px)
-.stage-2 {
-    position: static;
-    padding-top: 20px;
-}
-@media screen and (max-height: 480px)
-.stage-2 {
-    position: static;
-    padding-top: 20px;
-}
 
 .main {
     background-color: #f1f3f7;
@@ -86,8 +76,7 @@
     height: 60px;
     padding: 30px 15px 10px;
     width: 100%;
-    color: #000;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.2;
     letter-spacing: 1px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -100,15 +89,25 @@
     -moz-appearance: none;
     appearance: none;
     }
+.input-group__password{
+    height: 60px;
+    margin-top: 12px;
+    padding: 30px 15px 10px;
+    width: 100%;
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    border-radius: 4px;
+    background-color: #fff;
+    border: 1px solid #eaebf2;
+    box-sizing: border-box;
+    box-shadow: none;
+    
 
-.input-group__placeholder {
-    position: absolute;
-    top: 8px;
-    left: 15px;
-    pointer-events: none;
-    font-size: 14px;
-    color: #8d94ad;
-}
+    }
+
+
 .btn.disabled {
     opacity: .5;
     pointer-events: none;
@@ -118,6 +117,7 @@
     background-color: #4b8af9;
     border: 1px solid #4b8af9;
     color: #fff;
+    margin-bottom: 4px;
 }
 .btn {
     display: flex;
@@ -133,7 +133,10 @@
     box-sizing: border-box;
     outline: none;
 }
-
+.confirmation a{
+    color:  #8895ad;
+    padding: 4% 4%;
+}
 
 
 
