--- a/app/templates/accounts/login_by_email.html
+++ b/app/templates/accounts/login_by_email.html
@@ -1,4 +1,4 @@
-{% extends "includes/base.html" %}
+{% extends "../includes/base.html" %}
 {% load static %}
 
 {% block css %}
@@ -8,24 +8,27 @@
     <div id="auth-app">
         <div class="main stage-2">
             <div class="auth">
-                <a type="button" href="#" class="auth__close-btn">
+                <a type="button" href="{% url 'homepage'%}" class="auth__close-btn">
                     <img src="{% static 'img/close.jpg' %}">
                 </a>
                 <div class="login">
-                    <a href="#" type="button" class="back-btn" >
+                    <a href="{% url 'users:login'%}" type="button" class="back-btn" >
                         <img src="{% static 'img/back.jpg' %}">
                     </a>
                     <div class="title title--main">Kabinetə giriş</div>
                     <form action="#">
                         <div class="input-group">
-                            <input class="input-group__field" type="email"> 
-                            <span class="input-group__placeholder">Elektron poçt</span>
+                            <input class="input-group__field" type="email" placeholder='Elektron poçt'> 
+                            <input class="input-group__password" type="password" placeholder="Şifrə" > 
                         </div>
                         
-                        <a href="#" class="btn btn--default "> 
+                        <button type="submit" class="btn btn--default "> 
                             E-mail kod göndərilsin
-                        </a>
-                    </form>   
+                        </button>
+                    </form>
+                    <div class="confirmation">   
+                        <a href="{% url 'users:password_reset' %}">Parolu unutmusan?</a>
+                    <div>
                 </div>
             </div>
             
