--- a/app/templates/registration/password_reset_email.html
+++ b/app/templates/registration/password_reset_email.html
@@ -4,7 +4,8 @@
 
 {% translate "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
-http://127.0.0.1:8000{% url 'password_reset_confirm' uidb64=uid token=token %}
+http://localhost:8080{% url 'password_reset_confirm' uidb64=uid token=token %} və ya
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %} 
 
 {% endblock %}
 
