--- a/app/templates/accounts/password_reset_complete.html
+++ b/app/templates/accounts/password_reset_complete.html
@@ -5,7 +5,7 @@
     <div class="container p-4">
 	    <h2 class="font-weight-bold mt-3">Şifrənin sıfırlanması tamamlandı</h2>
 		  <hr>
-        <p>Yeni şifrə təyin olundu. Davam edib indi <a href="{url 'users:login'}">sayta giriş </a> edə bilərsiniz</p>                 
+        <p>Yeni şifrə təyin olundu. Davam edib indi <a href="{url 'users:login-email'}">sayta giriş </a> edə bilərsiniz</p>                 
   
     </div>
 
