--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -123,7 +123,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card" style="width: 15rem;">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}"  alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
