--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -27,8 +27,8 @@
                             <div class="l-center">
                                 <div class="statistic-counters-i">
                                     <div class="statistic-counters-quantity day-visits">
-                                        {% for s in active_users %}
-                                            <span>{{ s }}</span>
+                                        {% for us in active_users %}
+                                            <span>{{ us }}</span>
                                         {% endfor %}
                                     </div>
                                     <div class="statistic-counters-text">istifadəçi<br>gün ərzində</div>
