--- a/app/templates/accounts/password_reset_complete.html
+++ b/app/templates/accounts/password_reset_complete.html
@@ -1,13 +1,9 @@
 {% extends '../includes/base.html' %}
 {% block body %} 
-  
   <!--Password Reset Complete-->
     <div class="container p-4">
 	    <h2 class="font-weight-bold mt-3">Şifrənin sıfırlanması tamamlandı</h2>
 		  <hr>
         <p>Yeni şifrə təyin olundu. Davam edib indi <a href="{url 'users:login'}">sayta giriş </a> edə bilərsiniz</p>                 
-  
     </div>
-
-
-{% endblock %}
+{% endblock body %}
